Fixing visibility utilities to work also on no-block element (span, .span*, buttons, table columns, ...)

--- a/less/responsive.less
+++ b/less/responsive.less
@@ -36,31 +36,22 @@
 // For desktops
 .visible-phone     { display: none; }
 .visible-tablet    { display: none; }
-.visible-desktop   { display: block; }
-.hidden-phone      { display: block; }
-.hidden-tablet     { display: block; }
 .hidden-desktop    { display: none; }
 
 // Phones only
 @media (max-width: 767px) {
-  // Show
-  .visible-phone     { display: block; }
   // Hide
-  .hidden-phone      { display: none; }
+  .hidden-phone      { display: none !important; }
   // Hide everything else
-  .hidden-desktop    { display: block; }
-  .visible-desktop   { display: none; }
+  .visible-desktop   { display: none !important; }
 }
 
 // Tablets & small desktops only
 @media (min-width: 768px) and (max-width: 979px) {
-  // Show
-  .visible-tablet    { display: block; }
   // Hide
-  .hidden-tablet     { display: none; }
+  .hidden-tablet     { display: none !important; }
   // Hide everything else
-  .hidden-desktop    { display: block; }
-  .visible-desktop   { display: none; }
+  .visible-desktop   { display: none !important; }
 }
 
 
